fixed security vulnerablities

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "pack": "npm run pack:main && npm run pack:renderer",
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-    "postinstall": "install-app-deps",
+    "postinstall": "",
     "rebuild": "./node_modules/.bin/electron-rebuild"
   },
   "build": {
@@ -78,13 +78,13 @@
     "babel-register": "^6.26.0",
     "cfonts": "^2.8.6",
     "chalk": "^2.4.1",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "^6.0.3",
     "cross-env": "^5.1.6",
-    "css-loader": "^0.28.11",
+    "css-loader": "^4.2.0",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
     "electron": "^9.1.1",
-    "electron-builder": "^20.19.2",
+    "electron-builder": "^22.8.1",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-rebuild": "^1.11.0",
